# timely-greeter-bot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/chat_id/: mod.rs
src/env/: mod.rs
src/error/: mod.rs
src/persist/: mod.rs
src/telegram/: mod.rs  types.rs
src/timezone/: constants.rs  greeter_loop.rs  mod.rs
