[package]
name = "timely_greeter_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
telegram-bot = "0.7"
tokio = { version =  "1.8", features = ["full"] }